# burl

./: .gitignore  AUTHORS  ChangeLog  Dockerfile  LICENSE  Makefile  Pipfile  README.md  README.rst  bookmarklet.js  docker_entrypoint.sh  setup.cfg  setup.py
.github/workflows/: test.yml
burl/: manage.py
burl/core/: __init__.py  admin.py  apps.py  models.py  settings.py  tests.py  utils.py  views.py  wsgi.py
burl/core/api/: serializers.py  views.py  viewsets.py
burl/core/conf/: __init__.py  defaults.py  settings.py
burl/core/migrations/: 0001_initial.py  0002_auto_20210508_1204.py  0003_migrate_redirects_briefurls.py  0004_alter_burluser_first_name.py
burl/core/settings_ghost/: defaults.py  production.py  wryfi.py
burl/core/templates/: 404.html
burl/core/tests/: test_api.py  test_models.py  test_views.py
burl/core/urls/: api_v1.py  api_v2.py  root.py
burl/core/utils/: settings.py
burl/redirects/: README.md  __init__.py  admin.py  apps.py  database.py  models.py  utils.py  views.py
burl/redirects/api/: serializers.py  urls_v1.py  views.py  viewsets.py
burl/redirects/migrations/: 0001_initial.py  0004_auto_20180521_0813.py  0005_auto_20180521_0943.py  0006_auto_20180521_0944.py  0007_auto_20190112_1059.py  0008_auto_20190115_1812.py  0009_auto_20190115_1815.py
burl/redirects/tests/: test_api.py  test_forms.py  test_models.py  test_utils.py  test_views.py
hashurl/: manage.py
hashurl/core/: wsgi.py
hashurl/core/api/: fields.py
hashurl/core/settings/: defaults.py  production.py  wryfi.py
hashurl/redirects/: admin.py  models.py  views.py
(+19 files in other folders)
