[metadata]
name = burl
author = Chris Haumesser
author-email = chris.haumesser@gmail.com
summary = a url shortening django app
description-file = README.rst
requires-python = >=3.6

[options]
packages = find:

[files]
data_files =
    templates = core/templates/*

[entry_points]
console_scripts =
    burl-manager = burl.manage:main