[metadata]
name = burl
author = Chris Haumesser
author-email = chris.haumesser@gmail.com
summary = a url shortening django app
description-file = README.rst
requires-python = >=3.6
home-page = https://github.com/wryfi/burl
classifier =
    Environment :: Web Environment
    Framework :: Django :: 2.1
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Operating System :: MacOS

[options]
packages = find:

[files]
data_files =
    templates = core/templates/*

[entry_points]
console_scripts =
    burl-manager = burl.manage:main